# fukaskus

./: .gitignore  CMakeLists.txt  README.MD  build.ps1  conan.ps1  conan.sh  conanfile.txt  conanprofile_linux.txt  conanprofile_win.txt  install.ps1  install.sh  setup.ps1  setup_cli.ps1  setup_cli.sh  setup_libs.ps1  setup_libs.sh
cli/: CMakeLists.txt  README.md
cmake/: FukaskusConfig.cmake.in
install/include/reader/: bundle_reader_32.hpp
install/include/writer/: bundle_writer_32.hpp
install/lib/cmake/fukaskus/: FukaskusConfig.cmake  FukaskusTargets-debug.cmake  FukaskusTargets.cmake
libs/: README.MD
libs/fukaskus_reader/: CMakeLists.txt
libs/fukaskus_reader/include/fukaskus_reader/: bundle_reader.hpp
libs/fukaskus_reader/src/: bundle_reader_32.cpp
libs/fukaskus_writer/: CMakeLists.txt
libs/fukaskus_writer/include/: specification.hpp
libs/fukaskus_writer/include/fukaskus_writer/: bundle_creator.hpp  bundle_writer.hpp  specification_reader.hpp
libs/fukaskus_writer/src/: bundle_creator.cpp  bundle_writer_32.cpp  specification_reader.cpp
src/: main.cpp
